[package]
name = "icp_token_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
serde = "1.0"
serde_derive = "1.0"
ic-ledger-types = "0.4"
hex = "0.4"
sha2 = "0.10"

[profile.release]
lto = true
opt-level = 'z'
